--- a/applications/advection/2d/hemisphere/Makefile.waveprop.inc
+++ b/applications/advection/2d/hemisphere/Makefile.waveprop.inc
@@ -3,9 +3,9 @@
 AMR_WAVEPROP = $(FORESTCLAW)/src/solvers/amr_waveprop
 AMR_WAVEPROP_FORTRAN = $(AMR_WAVEPROP)/fortran_source
 
-solver_includes = -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
+waveprop_includes := -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
 
-waveprop_objs := \
+waveprop_lib := \
 	$(AMR_WAVEPROP)/amr_waveprop.o \
 	$(AMR_WAVEPROP_FORTRAN)/limiter.o \
 	$(AMR_WAVEPROP_FORTRAN)/src2.o \
@@ -15,7 +15,6 @@ waveprop_objs := \
 	$(AMR_WAVEPROP_FORTRAN)/qinit.o \
 	$(AMR_WAVEPROP_FORTRAN)/bc2.o \
 	$(AMR_WAVEPROP_FORTRAN)/bc2_manifold.o \
-	$(AMR_WAVEPROP_FORTRAN)/fdisc.o \
 	$(AMR_WAVEPROP_FORTRAN)/flux2.o \
 	$(AMR_WAVEPROP_FORTRAN)/qad2.o \
 	$(AMR_WAVEPROP_FORTRAN)/step2.o \
@@ -24,9 +23,9 @@ waveprop_objs := \
 
 
 
-solver_objs := \
+waveprop_objs := \
 	qinit_manifold.o \
 	b4step2_manifold.o \
 	setaux_manifold.o \
 	setprob.o \
-	$(waveprop_objs)
+	$(waveprop_lib)
