--- a/applications/advection/2d/hemisphere/Makefile
+++ b/applications/advection/2d/hemisphere/Makefile
@@ -8,6 +8,8 @@ FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
 FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
+FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
+
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 solver_objs :=
@@ -48,14 +50,13 @@ exampleobjs = \
 	$(solver_objs)
 
 amrclawobjs = \
-	$(FORESTCLAW)/AMRClaw/src/philim.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mapc2p.o \
-	$(FORESTCLAW)/AMRClaw/src2d/setup_mesh.o \
-	$(FORESTCLAW)/AMRClaw/src2d/claw2d_utils.o \
-	$(FORESTCLAW)/AMRClaw/src2d/claw_out2.o \
+	$(FORTRAN_SRC)/philim.o \
+	$(FORTRAN_SRC)/setup_mesh.o \
+	$(FORTRAN_SRC)/claw2d_utils.o \
+	$(FORTRAN_SRC)/claw_out2.o \
+	$(FORTRAN_SRC)/claw2d_utils_mapped.o \
 	$(FORESTCLAW)/AMRClaw/src2d/set_maptype.o \
 	$(FORESTCLAW)/AMRClaw/src2d/scale_rot_map.o \
-	$(FORESTCLAW)/AMRClaw/src2d/claw2d_utils_mapped.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mappings/block.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_cart.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_disk.o \
