--- a/applications/advection/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/sphere/fclaw2d_defaults.ini
@@ -1,13 +1,13 @@
 [Options]
-     mx = 16		  # mx_leaf
-     my = 16              # my_leaf
+     mx = 8		  # mx_leaf
+     my = 8              # my_leaf
 
      minlevel = 2         # Minimum level
      maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1            # Used for all three out styles;  has different meaning, though.
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      tfinal = 5.0         #
      nstep = 1            # Only used if outstyle is 3
 
@@ -26,7 +26,7 @@
      manifold = T         # Manifold
 
 
-     subcycle = F         # subcycle in time ( = T or F).
+     subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
 
