Finally fixed sphere grid bug;  problem was mainly in ghost_twopatch.f, where I had not changed from and 'aux' array to an 'area' grid, when in fact, area was being passed in, with dimensioning that was different from the 'aux' array.
  -- This should fix mystery NaN's that were cropping up.

--- a/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
@@ -25,7 +25,7 @@
 
      manifold = T         # Manifold
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
      check_conservation = F
 
