--- a/applications/advection/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/sphere/fclaw2d_defaults.ini
@@ -7,12 +7,12 @@
      regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20            # Used for all three out styles;  has different meaning, though.
-     tfinal = 5.0         #
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     tfinal = 4.0         #
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.001   # Initial time step for 'minlevel'
+     initial_dt = 0.02   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -26,7 +26,7 @@
      manifold = T         # Manifold
 
 
-     subcycle = T         # subcycle in time ( = T or F).
+     subcycle = F         # subcycle in time ( = T or F).
 
      check_conservation = F
 
