--- a/applications/advection/2d/sphere/Makefile
+++ b/applications/advection/2d/sphere/Makefile
@@ -54,6 +54,7 @@ amrclawobjs = \
 	$(FORTRAN_SRC)/claw2d_utils.o \
 	$(FORTRAN_SRC)/claw_out2.o \
 	$(FORTRAN_SRC)/claw2d_utils_mapped.o \
+	$(FORTRAN_SRC)/cellave2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/set_maptype.o \
 	$(FORESTCLAW)/AMRClaw/src2d/scale_rot_map.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mappings/block.o \
