Moved generic Fortran files from example Makefiles to library Makefile

--- a/applications/advection/2d/hemisphere/Makefile
+++ b/applications/advection/2d/hemisphere/Makefile
@@ -8,8 +8,6 @@ FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
 FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
-FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
-
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 solver_objs :=
@@ -49,20 +47,6 @@ exampleobjs = \
 	mapc2m.o \
 	$(solver_objs)
 
-amrclawobjs = \
-	$(FORTRAN_SRC)/philim.o \
-	$(FORTRAN_SRC)/setup_mesh.o \
-	$(FORTRAN_SRC)/claw2d_utils.o \
-	$(FORTRAN_SRC)/claw_out2.o \
-	$(FORTRAN_SRC)/debug.o \
-	$(FORTRAN_SRC)/claw2d_utils_mapped.o \
-	$(FORESTCLAW)/AMRClaw/src2d/set_maptype.o \
-	$(FORESTCLAW)/AMRClaw/src2d/scale_rot_map.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/block.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_cart.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_disk.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_mb_sphere.o
-
 ifeq ($(GEO),sphere)
    GeoFiles := \
       $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_sphere.o
@@ -78,7 +62,7 @@ ifeq ($(GEO),cart)
       $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_cart.o
 endif
 
-OBJECTS = $(TARGET).o $(exampleobjs) $(amrclawobjs) $(GeoFiles)
+OBJECTS = $(TARGET).o $(exampleobjs) $(GeoFiles)
 
 $(TARGET): $(OBJECTS) $(FORESTCLAW)/src/libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
