--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -1,14 +1,12 @@
 # Makefile in src
 
 TARGET = swirl
-
 GEO = cart
+
 
 FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
 FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
-
-FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
 
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
@@ -47,26 +45,10 @@ exampleobjs = \
 	$(solver_objs)
 
 
-amrclawobjs = \
-	$(FORTRAN_SRC)/philim.o \
-	$(FORTRAN_SRC)/claw_out2.o \
-	$(FORTRAN_SRC)/mapc2p.o \
-	$(FORTRAN_SRC)/mapc2m.o \
-	$(FORTRAN_SRC)/setup_mesh.o \
-	$(FORTRAN_SRC)/claw2d_utils_mapped.o \
-	$(FORTRAN_SRC)/claw2d_utils.o \
-	$(FORTRAN_SRC)/debug.o \
-	$(FORESTCLAW)/AMRClaw/src2d/set_maptype.o \
-	$(FORESTCLAW)/AMRClaw/src2d/scale_rot_map.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/block.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_cart.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_disk.o \
-	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_mb_sphere.o
-
 GeoFiles := \
       $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_cart.o
 
-OBJECTS = $(TARGET).o $(exampleobjs) $(amrclawobjs) $(GeoFiles)
+OBJECTS = $(TARGET).o $(exampleobjs) $(GeoFiles)
 
 $(TARGET): $(OBJECTS) $(FORESTCLAW)/src/libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
