--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,12 @@
 
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
+FC = gfortran
+FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
+
+FORTRAN_SRC = $(FORESTCLAW)/src/fortran_source2d
+FORTRAN_INC = $(FORTRAN_SRC)
+
 fclawobjs = \
 	ClawPatch.o \
 	clawpack_fort.o \
@@ -27,18 +33,38 @@ fclawobjs = \
         fclaw2d_p4est.o \
 	forestclaw2d.o
 
-libforestclaw.a: $(fclawobjs)
+# Fortran routines used generally by solvers (so far).
+amrclawobjs = \
+	$(FORTRAN_SRC)/philim.o \
+	$(FORTRAN_SRC)/claw_out2.o \
+	$(FORTRAN_SRC)/mapc2p.o \
+	$(FORTRAN_SRC)/mapc2m.o \
+	$(FORTRAN_SRC)/setup_mesh.o \
+	$(FORTRAN_SRC)/claw2d_utils_mapped.o \
+	$(FORTRAN_SRC)/claw2d_utils.o \
+	$(FORTRAN_SRC)/debug.o \
+	$(FORTRAN_SRC)/cellave2.o \
+	$(FORESTCLAW)/AMRClaw/src2d/set_maptype.o \
+	$(FORESTCLAW)/AMRClaw/src2d/scale_rot_map.o \
+	$(FORESTCLAW)/AMRClaw/src2d/mappings/block.o \
+	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_cart.o \
+	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_disk.o \
+	$(FORESTCLAW)/AMRClaw/src2d/mappings/mapc2m_mb_sphere.o
+
+libforestclaw.a: $(fclawobjs) $(amrclawobjs)
 	ar cru $@ $^
 
 .c.o:
 	$(P4EST_CC) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -c $< -o $@
 
 .cpp.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I. -c $< -o $@
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -I. -c $< -o $@
+
+.f.o:
+	$(FC) -Wall $(FFLAGS) -c $< -o $@
 
 clean:
-	rm -f *.o *.a $(fclawobjs)
+	rm -f *.o *.a $(fclawobjs) $(amrclawobjs)
 
 realclean:
 	rm -f *.o *.a $(fclawobjs)
