Moved mapping files to forestclaw/src/mappings/<geo>

--- a/applications/manyclaw/2d/swirl/Makefile
+++ b/applications/manyclaw/2d/swirl/Makefile
@@ -1,40 +1,14 @@
-# Makefile in src
+# Makefile for sphere example
 
 TARGET = swirl
-
 GEO = cart
 
+# -----------------------------------------------------------
 FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
-FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
-include $(P4EST_DIR)/etc/Makefile.p4est.mk
-
-solver_objs :=
-solver_includes :=
-
-include Makefile.manyclaw.inc
-
-solver_objs += $(manyclaw_objs)
-solver_includes += $(manyclaw_includes)
-
-# make sure that the first make target is the executable
-default: $(TARGET)
-
-.cpp.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I$(FORESTCLAW)/src/ $(solver_includes) -c $< -o $@
-
-.c.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I. -I$(FORESTCLAW)/src/ -c $< -o $@
-
-.f.o:
-	$(FC) -Wall $(FFLAGS) -c $< $(solver_includes) -o $@
-
-
-.PHONY: clean realclean default $(TARGET)
-
+# -----------------------------------------------------------
+# Define local objects here
 exampleobjs = \
 	ghost_twopatch.o \
 	tag4refinement.o \
@@ -42,19 +16,52 @@ exampleobjs = \
 	rpn2ad1.o \
 	rpt2ad1.o \
 	swirl_user.o \
-	$(solver_objs)
+	qinit.o \
+	b4step2.o \
+	setaux.o \
+	setprob.o
 
+# Solver routines (several solvers can be added here)
+include Makefile.manyclaw.inc
+solverobjs = $(manyclaw_objs)
+solverincludes = $(manyclaw_includes)
 
-GeoFiles := $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_cart.o
+# Mapping routines
+geoobjs = $(FORESTCLAW)/src/mappings/sphere/set_maptype_sphere.o
 
-OBJECTS = $(TARGET).o $(exampleobjs) $(GeoFiles)
+OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs)
+
+# Specify location of gfortran library
+FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
+
+# -----------------------------------------------------------
+# The rest of this is more or less default.
+# -----------------------------------------------------------
+
+include $(P4EST_DIR)/etc/Makefile.p4est.mk
+
+# make sure that the first make target is the executable
+default: $(TARGET)
+
+.cpp.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.c.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.f.o:
+	$(FC) -Wall $(FFLAGS) -c $< ${solverincludes} -o $@
+
+.PHONY: clean realclean default $(TARGET)
 
 $(TARGET): $(OBJECTS) $(FORESTCLAW)/src/libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
 	$(P4EST_LIBS) -o $@
 
 clean:
-	rm -f *.o $(TARGET) $(OBJECTS)
+	rm -f *.o $(TARGET) $(exampleobjs)
 
-realclean: clean
-	rm -f $(TARGET) $(example_objs) $(GeoFiles) fort.*
+realclean:
+	rm -f *.o $(TARGET) $(OBJECTS) fort.*
