--- a/applications/advection/2d/hemisphere/Makefile.waveprop.inc
+++ b/applications/advection/2d/hemisphere/Makefile.waveprop.inc
@@ -5,7 +5,7 @@ AMR_WAVEPROP_FORTRAN = $(AMR_WAVEPROP)/fortran_source
 
 waveprop_includes := -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
 
-waveprop_lib := \
+waveprop_objs = \
 	$(AMR_WAVEPROP)/amr_waveprop.o \
 	$(AMR_WAVEPROP_FORTRAN)/limiter.o \
 	$(AMR_WAVEPROP_FORTRAN)/src2.o \
@@ -19,13 +19,3 @@ waveprop_lib := \
 	$(AMR_WAVEPROP_FORTRAN)/qad2.o \
 	$(AMR_WAVEPROP_FORTRAN)/step2.o \
 	$(AMR_WAVEPROP_FORTRAN)/ClawPatch2.o
-
-
-
-
-waveprop_objs := \
-	qinit_manifold.o \
-	b4step2_manifold.o \
-	setaux_manifold.o \
-	setprob.o \
-	$(waveprop_lib)
