--- a/applications/advection/2d/swirl/Makefile.waveprop.inc
+++ b/applications/advection/2d/swirl/Makefile.waveprop.inc
@@ -3,14 +3,15 @@
 AMR_WAVEPROP = $(FORESTCLAW)/src/solvers/amr_waveprop
 AMR_WAVEPROP_FORTRAN = $(AMR_WAVEPROP)/fortran_source
 
-waveprop_includes = -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
+waveprop_includes := -I$(AMR_WAVEPROP) -I$(AMR_WAVEPROP_FORTRAN)
 
-waveprop_lib := \
+waveprop_objs = \
 	$(AMR_WAVEPROP)/amr_waveprop.o \
 	$(AMR_WAVEPROP_FORTRAN)/limiter.o \
 	$(AMR_WAVEPROP_FORTRAN)/src2.o \
 	$(AMR_WAVEPROP_FORTRAN)/src2_manifold.o \
 	$(AMR_WAVEPROP_FORTRAN)/b4step2_manifold.o \
+	$(AMR_WAVEPROP_FORTRAN)/src2_manifold.o \
 	$(AMR_WAVEPROP_FORTRAN)/setaux_manifold.o \
 	$(AMR_WAVEPROP_FORTRAN)/qinit_manifold.o \
 	$(AMR_WAVEPROP_FORTRAN)/bc2.o \
@@ -19,12 +20,3 @@ waveprop_lib := \
 	$(AMR_WAVEPROP_FORTRAN)/qad2.o \
 	$(AMR_WAVEPROP_FORTRAN)/step2.o \
 	$(AMR_WAVEPROP_FORTRAN)/ClawPatch2.o
-
-
-
-waveprop_objs := \
-	qinit.o \
-	b4step2.o \
-	setaux.o \
-	setprob.o \
-	$(waveprop_lib)
