Updated Makefiles to reflect addition of user files

--- a/applications/advection/2d/sphere/Makefile
+++ b/applications/advection/2d/sphere/Makefile
@@ -1,39 +1,14 @@
-# Makefile in src
+# Makefile for sphere example
 
 TARGET = sphere
-
 GEO = sphere
 
+# -----------------------------------------------------------
 FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
-FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
-include $(P4EST_DIR)/etc/Makefile.p4est.mk
-
-solver_objs :=
-solver_includes :=
-
-include Makefile.waveprop.inc
-
-solver_objs += $(waveprop_objs)
-solver_includes += $(waveprop_includes)
-
-# make sure that the first make target is the executable
-default: $(TARGET)
-
-.cpp.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/src -I$(FORESTCLAW)/AMRClaw/src -I. ${solver_includes} -c $< -o $@
-
-.c.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/src -I$(FORESTCLAW)/AMRClaw/src -I. ${solver_includes} -c $< -o $@
-
-.f.o:
-	$(FC) -Wall $(FFLAGS) -c $< ${solver_includes} -o $@
-
-.PHONY: clean realclean default $(TARGET)
-
+# -----------------------------------------------------------
+# Define local objects here
 exampleobjs = \
 	sphere_user.o \
 	ghost_twopatch.o \
@@ -42,18 +17,52 @@ exampleobjs = \
 	mapc2m.o \
 	rpn2noncons.o \
 	rpt2noncons.o \
-	$(solver_objs)
+	qinit_manifold.o \
+	b4step2_manifold.o \
+	setaux_manifold.o \
+	setprob.o
 
-GeoFiles := $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_sphere.o
+# Solver routines (several solvers can be added here)
+include Makefile.waveprop.inc
+solverobjs = $(waveprop_objs)
+solverincludes = $(waveprop_includes)
 
-OBJECTS = $(TARGET).o $(exampleobjs) $(GeoFiles) $(debug_files)
+# Mapping routines
+geoobjs = $(FORESTCLAW)/src/mappings/sphere/set_maptype_sphere.o
+
+OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs)
+
+# Specify location of fortran library
+FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
+
+# -----------------------------------------------------------
+# The rest of this is more or less default.
+# -----------------------------------------------------------
+
+include $(P4EST_DIR)/etc/Makefile.p4est.mk
+
+# make sure that the first make target is the executable
+default: $(TARGET)
+
+.cpp.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.c.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.f.o:
+	$(FC) -Wall $(FFLAGS) -c $< ${solverincludes} -o $@
+
+.PHONY: clean realclean default $(TARGET)
 
 $(TARGET): $(OBJECTS) $(FORESTCLAW)/src/libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
 	$(P4EST_LIBS) -o $@
 
 clean:
-	rm -f *.o $(TARGET) $(OBJECTS)
+	rm -f *.o $(TARGET) $(exampleobjs)
 
 realclean:
-	rm -f *.o $(exampleobjs) fort.* $(TARGET)
+	rm -f *.o $(TARGET) $(OBJECTS) fort.*
