--- a/applications/advection/2d/hemisphere/Makefile
+++ b/applications/advection/2d/hemisphere/Makefile
@@ -1,76 +1,68 @@
-# Makefile in src
+# Makefile for sphere example
 
 TARGET = hemisphere
+GEO = hemisphere
 
-GEO = sphere
-
+# -----------------------------------------------------------
 FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
-FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
-include $(P4EST_DIR)/etc/Makefile.p4est.mk
-
-solver_objs :=
-solver_includes :=
-
-# ---------------------------------
-include Makefile.waveprop.inc
-solver_objs += $(waveprop_objs)
-solver_includes += $(waveprop_includes)
-
-# ---------------------------------
-
-# make sure that the first make target is the executable
-default: $(TARGET)
-
-
-.cpp.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I$(FORESTCLAW)/src/ $(solver_includes) -c $< -o $@
-
-.c.o:
-	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I. -I$(FORESTCLAW)/src/ -c $< -o $@
-
-.f.o:
-	$(FC) -Wall $(FFLAGS) -c $< $(solver_includes) -o $@
-
-.PHONY: clean realclean default $(TARGET)
-
-
+# -----------------------------------------------------------
+# Define local objects here
 exampleobjs = \
 	hemisphere_user.o \
 	ghost_twopatch.o \
 	velocity_wind.o \
 	tag4refinement.o \
+	mapc2m.o \
 	rpn2noncons.o \
 	rpt2noncons.o \
-	mapc2m.o \
-	$(solver_objs)
+	qinit_manifold.o \
+	b4step2_manifold.o \
+	setaux_manifold.o \
+	setprob.o
 
-ifeq ($(GEO),sphere)
-   GeoFiles := \
-      $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_sphere.o
-endif
+# Solver routines (several solvers can be added here)
+include Makefile.waveprop.inc
+solverobjs = $(waveprop_objs)
+solverincludes = $(waveprop_includes)
 
-ifeq ($(GEO),disk)
-   GeoFiles := \
-      $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_disk.o
-endif
+# Mapping routines
+geoobjs = $(FORESTCLAW)/src/mappings/sphere/set_maptype_sphere.o
 
-ifeq ($(GEO),cart)
-   GeoFiles := \
-      $(FORESTCLAW)/AMRClaw/src2d/mappings/set_maptype_cart.o
-endif
+OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs)
 
-OBJECTS = $(TARGET).o $(exampleobjs) $(GeoFiles)
+# Specify location of fortran library
+FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
+
+# -----------------------------------------------------------
+# The rest of this is more or less default.
+# -----------------------------------------------------------
+
+include $(P4EST_DIR)/etc/Makefile.p4est.mk
+
+# make sure that the first make target is the executable
+default: $(TARGET)
+
+.cpp.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.c.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
+	-I$(FORESTCLAW)/src -I. ${solverincludes} -c $< -o $@
+
+.f.o:
+	$(FC) -Wall $(FFLAGS) -c $< ${solverincludes} -o $@
+
+.PHONY: clean realclean default $(TARGET)
 
 $(TARGET): $(OBJECTS) $(FORESTCLAW)/src/libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
 	$(P4EST_LIBS) -o $@
 
 clean:
-	rm -f *.o $(TARGET) $(OBJECTS)
+	rm -f *.o $(TARGET) $(exampleobjs)
 
 realclean:
-	rm -f *.o $(OBJECTS) fort.* $(TARGET)
+	rm -f *.o $(TARGET) $(OBJECTS) fort.*
