--- a/applications/shallow/2d/ridge_fclaw/Makefile.waveprop.inc
+++ b/applications/shallow/2d/ridge_fclaw/Makefile.waveprop.inc
@@ -10,7 +10,7 @@ waveprop_objs = \
 	$(AMR_WAVEPROP_FORTRAN)/limiter.o \
 	$(AMR_WAVEPROP_FORTRAN)/setaux.o \
 	$(AMR_WAVEPROP_FORTRAN)/bc2.o \
-	$(AMR_WAVEPROP_FORTRAN)/flux2.o \
+	$(AMR_WAVEPROP_FORTRAN)/flux2fw.o \
 	$(AMR_WAVEPROP_FORTRAN)/qad2.o \
 	$(AMR_WAVEPROP_FORTRAN)/step2.o \
 	$(AMR_WAVEPROP_FORTRAN)/ClawPatch2.o
