Getting example to work

--- a/applications/shallow/2d/ridge_fclaw/Makefile
+++ b/applications/shallow/2d/ridge_fclaw/Makefile
@@ -23,6 +23,7 @@ exampleobjs = \
 	setaux_ridge.o \
 	src2.o \
 	setprob.o \
+	output_geo.o \
 	bmount.o
 
 # Solver routines (several solvers can be added here)
