New customized tag4refinement

--- a/applications/shallow/2d/ridge_fclaw/Makefile
+++ b/applications/shallow/2d/ridge_fclaw/Makefile
@@ -13,6 +13,7 @@ exampleobjs = \
 	ridge_user.o \
 	ghost_twopatch.o \
 	tag4refinement.o \
+	tag4refinement_default.o \
 	mapc2m.o \
 	rpn2swsphere_fw.o \
 	rpt2swq.o \
