--- a/src/Makefile
+++ b/src/Makefile
@@ -27,6 +27,7 @@ fclawobjs = \
 	amr_physbc.o \
 	amr_utils.o \
 	amr_options.o \
+	regrid_functions.o \
 	fclaw2d_convenience.o \
 	fclaw2d_solvers.o \
 	fclaw2d_map.o \
