Included new interpolation routine that allows for more general arguments;  aux arrays in this case.

--- a/applications/shallow/2d/ridge_fclaw/Makefile
+++ b/applications/shallow/2d/ridge_fclaw/Makefile
@@ -17,6 +17,7 @@ exampleobjs = \
 	rpn2swsphere_fw.o \
 	rpt2swq.o \
 	qinit.o \
+	interpolate_geo.o \
 	b4step2.o \
 	setgauges.o \
 	settsunami_geo.o \
