Modified initialization function slightly

--- a/applications/advection/2d/no_solver/Makefile
+++ b/applications/advection/2d/no_solver/Makefile
@@ -26,8 +26,8 @@ solver_includes +=
 
 exampleobjs = \
 	no_solver_user.o \
-	initialize_ac.o \
 	initialize.o \
+	fdisc.o \
 	ghost_twopatch.o \
 	tag4refinement.o
 
