The user must now make a local copy of "Make.defs" (under forestclaw) and  specify FCLAW_MPI=True/False, as well as p4est build locations for MPI/non-MPI versions.   Also, the user must specify the location of their fortran library.
This is only a first pass at a more general build system.  More to come, no doubt.

--- a/applications/advection/2d/sphere/Makefile
+++ b/applications/advection/2d/sphere/Makefile
@@ -3,6 +3,8 @@
 TARGET = sphere
 GEO = sphere
 
+include $(FORESTCLAW)/Make.defs.local
+
 # -----------------------------------------------------------
 FC = gfortran
 FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
@@ -31,9 +33,6 @@ solverincludes = $(waveprop_includes)
 geoobjs = $(FORESTCLAW)/src/mappings/sphere/set_maptype_sphere.o
 
 OBJECTS = $(TARGET).o $(exampleobjs) $(solverobjs) $(geoobjs)
-
-# Specify location of fortran library
-FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
 
 # -----------------------------------------------------------
 # The rest of this is more or less default.
