--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -7,7 +7,7 @@ include $(FORESTCLAW)/Make.defs.local
 
 # -----------------------------------------------------------
 FC = gfortran
-FFLAGS = -O0 -g -Wno-unused-dummy-argument -Wno-unused-variable
+FFLAGS = -O0 -g -Wno-unused-variable $(LOCAL_FFLAGS)
 
 # -----------------------------------------------------------
 # Define local objects here
