Added fortran routine that does reordering for q so that field variables are first.  This i s a temporary fix so that we can use the ManyClaw stuff.  Ultimtely, ForestClaw will probably have to have rordered loops as well.

--- a/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
+++ b/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
@@ -10,6 +10,7 @@ manyclaw_includes := -I$(AMR_MANYCLAW) -I$(AMR_MANYCLAW_FORTRAN) -I$(MANYCLAW) -
 
 manyclaw_objs = \
 	$(AMR_MANYCLAW)/amr_manyclaw.o \
+	$(AMR_MANYCLAW)/fortran_source/manyclaw_reorder.o \
 	$(AMR_MANYCLAW)/fortran_source/ClawPatch2.o \
 	$(AMR_MANYCLAW)/fortran_source/src2.o \
 	$(AMR_MANYCLAW)/fortran_source/step2.o \
