--- a/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
+++ b/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
@@ -14,5 +14,6 @@ manyclaw_objs = \
 	$(AMR_MANYCLAW)/fortran_source/ClawPatch2.o \
 	$(AMR_MANYCLAW)/fortran_source/src2.o \
 	$(AMR_MANYCLAW)/fortran_source/step2.o \
+	$(AMR_MANYCLAW)/fortran_source/bc2.o \
 	$(AMR_MANYCLAW)/fortran_source/flux2.o \
 	$(AMR_MANYCLAW)/fortran_source/limiter.o
