--- a/applications/manyclaw/2d/simple/fclaw2d_defaults.ini
+++ b/applications/manyclaw/2d/simple/fclaw2d_defaults.ini
@@ -2,7 +2,9 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
-     minlevel = 0         # Minimum level
+     serialout = T
+
+     minlevel = 3         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
