--- a/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
+++ b/applications/manyclaw/2d/simple/Makefile.manyclaw.inc
@@ -5,7 +5,7 @@ MANYCLAW = $(FORESTCLAW)/../ManyClaw
 AMR_MANYCLAW = $(FORESTCLAW)/src/solvers/amr_manyclaw
 AMR_MANYCLAW_FORTRAN = $(AMR_MANYCLAW)/fortran_source
 
-manyclaw_linkers := -lmanyclaw -L$(MANYCLAW)/lib
+manyclaw_linkers := -lmanyclaw -L$(MANYCLAW)/lib -L/opt/local/lib -ltbb
 manyclaw_includes := -I$(AMR_MANYCLAW) -I$(AMR_MANYCLAW_FORTRAN) -I$(MANYCLAW) -I/opt/local/include
 
 manyclaw_objs = \
