--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -2,6 +2,8 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
+     serialout = T
+
      minlevel = 1         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
