--- a/applications/manyclaw/2d/simple/fclaw2d_manyclaw.ini
+++ b/applications/manyclaw/2d/simple/fclaw2d_manyclaw.ini
@@ -5,4 +5,4 @@
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
-     mthlim = 0           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 0           # mthlim (a vector, with 'mwaves' entries)
