--- a/applications/manyclaw/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/manyclaw/2d/swirl/fclaw2d_defaults.ini
@@ -2,6 +2,8 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
+     serialout = T
+
      minlevel = 0         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
@@ -17,7 +19,7 @@
 
      verbosity = 0        # verbose
 
-     meqn = 2             # meqn
+     meqn = 1             # meqn
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
