Added serialout flag

--- a/applications/manyclaw/euler/2d/quadrants/fclaw2d_defaults.ini
+++ b/applications/manyclaw/euler/2d/quadrants/fclaw2d_defaults.ini
@@ -2,6 +2,8 @@
      mx = 64		  # mx_leaf
      my = 64               # my_leaf
 
+     serialout = T
+
      minlevel = 0         # Minimum level
      maxlevel = 0         # Maximum levels of refinement
      regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
