--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -2,7 +2,9 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
-     serialout = T
+     serialout = F
+
+     subcycle = F         # subcycle in time ( = T or F).
 
      minlevel = 1         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
@@ -31,8 +33,6 @@
 
      manifold = F         # Manifold
      mapped = F
-
-     subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
 
