Added amr_interp.cpp. This is where the time interpolation will be called from

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,6 +29,7 @@ fclawobjs = \
 	amr_mol.o \
 	amr_single_step.o \
 	amr_neighbors.o \
+	amr_timeinterp.o \
 	amr_physbc.o \
 	amr_utils.o \
 	amr_options.o \
