--- a/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
@@ -2,8 +2,10 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
+     serialout = T
+
      minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
